<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingStart="@dimen/x24" android:paddingEnd="@dimen/x24"
    android:orientation="vertical"
    android:showDividers="middle|end" android:divider="@drawable/center_personal_line">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="@dimen/x40"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_back_grey"
        android:paddingEnd="@dimen/x24"
        android:paddingTop="@dimen/x12"
        android:paddingBottom="@dimen/x12"/>
    <LinearLayout android:id="@+id/llAvatar"
        style="@style/center_personal_item" android:paddingBottom="@dimen/x15">
        <TextView
            style="@style/center_personal_tip" android:text="@string/center_personal_avatar"/>
        <View android:layout_weight="1"
            android:layout_width="0dp" android:layout_height="0dp" />
        <ImageView android:id="@+id/ivAvatar"
            android:layout_width="@dimen/x88" android:layout_height="@dimen/x88"
            android:layout_gravity="end" android:src="@drawable/home_photos"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/llName" style="@style/center_personal_item">
        <TextView
            style="@style/center_personal_tip" android:text="@string/center_personal_name"/>

        <TextView android:id="@+id/tvName"
            style="@style/center_personal_right_text"
            tools:text="联系方式"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/llId" style="@style/center_personal_item">
        <TextView
            style="@style/center_personal_tip" android:text="@string/center_personal_id"/>

        <TextView android:id="@+id/tvId"
            style="@style/center_personal_right_text"
            tools:text="联系方式"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/llGander" style="@style/center_personal_item">
        <TextView
            style="@style/center_personal_tip" android:text="@string/center_personal_gander"/>

        <TextView android:id="@+id/tvGender"
            style="@style/center_personal_right_text"
            tools:text="联系方式"/>

        <View style="@style/center_personal_more_icon"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/llContact" style="@style/center_personal_item">
        <TextView
            style="@style/center_personal_tip" android:text="@string/center_personal_contact"/>
        <TextView android:id="@+id/tvContact"
            style="@style/center_personal_right_text"
            tools:text="联系方式"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/llAddress" style="@style/center_personal_item">
        <TextView
            style="@style/center_personal_tip" android:text="@string/center_personal_address"/>

        <TextView android:id="@+id/tvAddress"
            style="@style/center_personal_right_text"
            tools:text="联系方式"/>

        <View style="@style/center_personal_more_icon"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/llSchool" style="@style/center_personal_item">
        <TextView
            style="@style/center_personal_tip" android:text="@string/center_personal_school"/>

        <TextView android:id="@+id/tvSchool"
            style="@style/center_personal_right_text"
            tools:text="联系方式"/>

        <View style="@style/center_personal_more_icon"/>
    </LinearLayout>

</LinearLayout>