<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/leftLayout"
        android:layout_width="@dimen/x278"
        android:layout_height="match_parent"
        android:background="@color/main_bg_color" />

    <ImageView
        android:id="@+id/ivHead"
        android:layout_width="@dimen/x114"
        android:layout_height="@dimen/x114"
        android:layout_marginTop="@dimen/x22"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@id/leftLayout"
        app:layout_constraintStart_toStartOf="@id/leftLayout"
        app:layout_constraintTop_toTopOf="@id/leftLayout"
        app:srcCompat="@drawable/home_photos" />

    <View
        android:layout_width="@dimen/x268"
        android:layout_height="@dimen/x138"
        android:background="@drawable/center_icon_bg"
        app:layout_constraintEnd_toEndOf="@id/leftLayout"
        app:layout_constraintStart_toStartOf="@id/leftLayout"
        app:layout_constraintTop_toTopOf="@id/leftLayout"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x5"
        android:text="1000123"
        android:textColor="@color/main_text_color"
        android:textSize="@dimen/x22"
        app:layout_constraintEnd_toEndOf="@id/leftLayout"
        app:layout_constraintStart_toStartOf="@id/leftLayout"
        app:layout_constraintTop_toBottomOf="@id/ivHead" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="晴天"
        android:textColor="@color/main_text_color"
        android:textSize="@dimen/x22"
        app:layout_constraintEnd_toEndOf="@id/leftLayout"
        app:layout_constraintStart_toStartOf="@id/leftLayout"
        app:layout_constraintTop_toBottomOf="@id/tvId" />

    <RadioGroup
        android:id="@+id/rgModule"
        android:layout_width="@dimen/x278"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x10"
        app:layout_constraintEnd_toEndOf="@id/leftLayout"
        app:layout_constraintStart_toStartOf="@id/leftLayout"
        app:layout_constraintTop_toBottomOf="@id/tvName">

        <RadioButton
            android:id="@+id/rbCenterPersonal"
            style="@style/center_module"
            android:checked="true"
            android:text="@string/center_personal" />

        <View style="@style/center_line" />

        <RadioButton
            android:id="@+id/rbMyTask"
            style="@style/center_module"
            android:text="@string/my_task" />

        <View style="@style/center_line" />

        <RadioButton
            android:id="@+id/rbMyClass"
            style="@style/center_module"
            android:text="@string/my_class" />

        <View style="@style/center_line" />

        <RadioButton
            android:id="@+id/rbMyParents"
            style="@style/center_module"
            android:text="@string/my_parents" />

        <View style="@style/center_line" />

        <RadioButton
            android:id="@+id/rbGrowthTrace"
            style="@style/center_module"
            android:text="@string/growth_trajectory" />

        <View style="@style/center_line" />

        <RadioButton
            android:id="@+id/rbCenterCoin"
            style="@style/center_module"
            android:text="@string/center_cloud_coin" />

        <View style="@style/center_line" />

        <RadioButton
            android:id="@+id/rbOperateGuide"
            style="@style/center_module"
            android:text="@string/operating_guide" />
    </RadioGroup>

    <com.yzy.ebag.student.widget.drawable.CenterTextView
        android:id="@+id/tvSetup"
        android:layout_width="@dimen/x139"
        android:layout_height="@dimen/x62"
        android:drawablePadding="@dimen/x12"
        android:text="@string/setting"
        android:textColor="@color/main_text_color"
        android:textSize="@dimen/x20"
        app:layout_constraintBottom_toBottomOf="@id/leftLayout"
        app:layout_constraintStart_toStartOf="@id/leftLayout"
        app:leftDrawable="@drawable/home_icon_set_up"
        app:leftDrawableHeight="@dimen/x38"
        app:leftDrawableWidth="@dimen/x38" />

    <com.yzy.ebag.student.widget.drawable.CenterTextView
        android:id="@+id/tvMain"
        android:layout_width="@dimen/x139"
        android:layout_height="@dimen/x62"
        android:drawablePadding="@dimen/x12"
        android:text="@string/main"
        android:textColor="@color/main_text_color"
        android:textSize="@dimen/x20"
        app:layout_constraintBottom_toBottomOf="@id/leftLayout"
        app:layout_constraintEnd_toEndOf="@id/leftLayout"
        app:leftDrawable="@drawable/home_icon_home"
        app:leftDrawableHeight="@dimen/x38"
        app:leftDrawableWidth="@dimen/x38" />

    <View
        android:id="@+id/tagView"
        android:layout_width="@dimen/x1002"
        android:layout_height="@dimen/x116"
        android:background="@drawable/center_top_bg"
        app:layout_constraintStart_toEndOf="@+id/leftLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/fragmentLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tagView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/leftLayout"
        tools:layout_editor_absoluteY="16dp">

    </FrameLayout>


</android.support.constraint.ConstraintLayout>