<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ebag.hd.widget.TitleBar
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rightText="@string/tip_submit"
        app:showRightText="true"
        app:titleText="@string/setting_feedback" />

    <View
        android:id="@+id/tagView1"
        android:layout_width="@dimen/x1232"
        android:layout_height="@dimen/y238"
        android:layout_marginTop="@dimen/y24"
        android:background="@drawable/setting_item_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView"/>

    <View
        android:id="@+id/tagView2"
        android:layout_width="@dimen/x1232"
        android:layout_height="@dimen/y198"
        android:layout_marginTop="@dimen/y24"
        android:background="@drawable/setting_item_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagView1"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/y10"
        android:layout_marginStart="@dimen/x16"
        android:layout_marginTop="@dimen/y10"
        android:text="@string/feedback_tip"
        android:textColor="@color/feedback_tip_color"
        android:textSize="@dimen/x24"
        app:layout_constraintEnd_toEndOf="@+id/tagView1"
        app:layout_constraintStart_toStartOf="@+id/tagView1"
        app:layout_constraintTop_toTopOf="@+id/tagView1" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/y19"
        android:gravity="start"
        android:textColor="@color/color_edit_color"
        android:textColorHint="@color/color_edit_hint"
        android:hint="@string/feedback_tip_hint"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/tagView1"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/y10"
        android:layout_marginStart="@dimen/x16"
        android:layout_marginTop="@dimen/y10"
        android:text="@string/feedback_photo_tip"
        android:textColor="@color/feedback_tip_color"
        android:textSize="@dimen/x24"
        app:layout_constraintEnd_toEndOf="@+id/tagView2"
        app:layout_constraintStart_toStartOf="@+id/tagView2"
        app:layout_constraintTop_toTopOf="@+id/tagView2" />


</android.support.constraint.ConstraintLayout>