<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/x508" android:layout_height="match_parent">

    <View
        android:id="@+id/bg"
        android:layout_width="@dimen/x508"
        android:layout_height="@dimen/x455"
        android:background="@drawable/dialog_radius_bg"
        android:layout_marginTop="@dimen/x50"
        app:layout_constraintTop_toTopOf="@id/ivHead"/>

    <View
        android:id="@+id/ivHead"
        android:layout_width="@dimen/x124"
        android:layout_height="@dimen/x124"
        android:background="@drawable/my_parents_add_icon"
        app:layout_constraintEnd_toEndOf="@id/bg"
        app:layout_constraintStart_toStartOf="@id/bg"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_parent_add"
        android:textColor="@color/color_dialog_add_class_title"
        android:textSize="@dimen/x28"
        app:layout_constraintEnd_toEndOf="@id/bg"
        app:layout_constraintStart_toStartOf="@id/bg"
        app:layout_constraintTop_toBottomOf="@+id/ivHead" />

    <EditText
        android:id="@+id/etCode"
        android:layout_width="@dimen/x460"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/x26"
        android:layout_marginTop="@dimen/x33"
        android:paddingBottom="@dimen/x5"
        android:gravity="center"
        android:textSize="@dimen/x22"
        android:hint="@string/my_parents_id_input"
        android:maxLength="10"
        android:textColor="@color/color_edit_color"
        android:textColorHint="@color/color_edit_hint"
        android:inputType="number"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="@id/bg"
        app:layout_constraintStart_toStartOf="@id/bg"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
    <View
        android:layout_width="@dimen/x460"
        android:layout_height="@dimen/x2"
        android:background="@color/color_dialog_line"
        app:layout_constraintEnd_toEndOf="@id/bg"
        app:layout_constraintStart_toStartOf="@id/bg"
        app:layout_constraintTop_toBottomOf="@+id/etCode"/>
    <EditText
        android:id="@+id/etRelation"
        android:layout_width="@dimen/x460"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x33"
        android:paddingTop="@dimen/x26"
        android:paddingBottom="@dimen/x5"
        android:gravity="center"
        android:maxLength="10"
        android:textSize="@dimen/x22"
        android:hint="@string/my_parents_relation_input"
        android:textColor="@color/color_edit_color"
        android:textColorHint="@color/color_edit_hint"
        android:inputType="textPersonName"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="@id/bg"
        app:layout_constraintStart_toStartOf="@id/bg"
        app:layout_constraintTop_toBottomOf="@+id/etCode" />

    <View
        android:layout_width="@dimen/x460"
        android:layout_height="@dimen/x2"
        android:background="@color/color_dialog_line"
        app:layout_constraintEnd_toEndOf="@id/bg"
        app:layout_constraintStart_toStartOf="@id/bg"
        app:layout_constraintTop_toBottomOf="@+id/etRelation"/>
    <TextView
        android:id="@+id/tvConfirm"
        android:layout_width="@dimen/x460"
        android:layout_height="@dimen/x68"
        android:gravity="center"
        android:textSize="@dimen/x26"
        android:layout_marginTop="@dimen/x68"
        android:text="@string/tip_confirm"
        android:textColor="@color/white"
        android:background="@drawable/btn_blue_confirm_selector"
        app:layout_constraintEnd_toEndOf="@id/bg"
        app:layout_constraintStart_toStartOf="@id/bg"
        app:layout_constraintTop_toBottomOf="@+id/etRelation" />

    <View
        android:id="@+id/btnClose"
        android:layout_width="@dimen/x58"
        android:layout_height="@dimen/x58"
        android:background="@drawable/my_class_dialog_close"
        app:layout_constraintEnd_toEndOf="@id/bg"
        app:layout_constraintTop_toTopOf="@+id/bg" />


</android.support.constraint.ConstraintLayout>