<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/my_class_list_bg" android:padding="@dimen/x28"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="horizontal" android:gravity="center_vertical">

    <FrameLayout
        android:layout_width="@dimen/x138"
        android:layout_height="@dimen/x138">
        <ImageView
            android:id="@+id/ivClassAvatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/class_img1" />

        <TextView
            android:id="@+id/tvClassName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/white"
            tools:text="TextView"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x18" android:orientation="vertical">
        <TextView android:id="@+id/tvHeadTeacher"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textColor="@color/color_edit_color" android:textSize="@dimen/x22"
            tools:text="@string/my_class_class_head_name"/>

        <LinearLayout
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginTop="@dimen/x18"
            android:gravity="center_vertical" android:baselineAligned="true">
            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textColor="#4a4a4a" android:textSize="@dimen/x20"
                android:text="@string/my_class_class_student"/>

            <ImageView android:id="@+id/ivStudent1"
                android:layout_width="@dimen/x28" android:layout_height="@dimen/x28"
                android:src="@color/color_edit_color" android:layout_marginRight="@dimen/x3"/>
            <ImageView android:id="@+id/ivStudent2"
                android:layout_width="@dimen/x28" android:layout_height="@dimen/x28"
                android:src="@color/color_edit_color" android:layout_marginRight="@dimen/x3"/>
            <ImageView android:id="@+id/ivStudent3"
                android:layout_width="@dimen/x28" android:layout_height="@dimen/x28"
                android:src="@color/color_edit_color" android:layout_marginRight="@dimen/x3"/>

            <TextView
                android:id="@+id/tvStudentNum"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textColor="#4a4a4a" android:textSize="@dimen/x20"
                tools:text="...共24人"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginTop="@dimen/x18">
            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textColor="#4a4a4a" android:textSize="@dimen/x20"
                android:text="@string/my_class_class_teacher"/>

            <ImageView android:id="@+id/ivTeacher1"
                android:layout_width="@dimen/x28" android:layout_height="@dimen/x28"
                android:src="@color/color_edit_color" android:layout_marginRight="@dimen/x3"/>
            <ImageView android:id="@+id/ivTeacher2"
                android:layout_width="@dimen/x28" android:layout_height="@dimen/x28"
                android:src="@color/color_edit_color" android:layout_marginRight="@dimen/x3"/>

            <ImageView android:id="@+id/ivTeacher3"
                android:layout_width="@dimen/x28" android:layout_height="@dimen/x28"
                android:src="@color/color_edit_color" android:layout_marginRight="@dimen/x3"/>

            <TextView
                android:id="@+id/tvTeacherNum"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textColor="#4a4a4a" android:textSize="@dimen/x20"
                tools:text="...共24人"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>